--- a/assets/css/account.css
+++ b/assets/css/account.css
@@ -4,11 +4,11 @@
     align-items: center;
 }
 
-#login {
+.connect {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    margin: 50px 0;
     border-radius: 10px;
     border: 1px solid var(--text-color);
     background-color: var(--background-color);
@@ -16,7 +16,7 @@
     padding: 20px 40px;
 }
 
-#login h2 {
+.connect h2 {
     margin-top: 0;
 }
 
@@ -35,7 +35,7 @@ input {
     border-radius: 20px;
 }
 
-input#password {
+.sign-in input#password {
     margin-bottom: 5px;
 }
 
@@ -53,7 +53,7 @@ input#password {
     text-align: right;
 }
 
-#signin-link {
+#signup-link, #signin-link {
     /* margin-bottom: 10px; */
     text-align: center;
 }
