--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,59 +1,88 @@
-/* SLIDER */
-.slider_container {
-    position: relative;
-    width: auto;
-    height: auto;
+/* SLIDER/SCROLLER SECTION */
+
+.scroller {
+    max-width: 100%;
+    /* overflow: hidden; */
+ }
+
+ .scroller_inner {
+    padding-block: 1rem;
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+ }
+
+.scroller[data-animated="true"] {
     overflow: hidden;
-}
-.slider {
-    position: relative;
-    width: 400%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    animation: 30s cubic-bezier(1, 0.95, 0.565, 1) sliding infinite;
-}
-.slide {
-    position: relative;
-    min-width: 80%;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    padding: 10%;
+    mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
 }
 
-@keyframes sliding {
-    0% {
-      transform: translateX(0%);
-    }
-    20% {
-      transform: translateX(0%);
-    }
-    25% {
-      transform: translateX(-100%);
-    }
-    45% {
-      transform: translateX(-100%);
-    }
-    50% {
-      transform: translateX(-200%);
-    }
-    70% {
-      transform: translateX(-200%);
-    }
-    75% {
-      transform: translateX(-300%);
-    }
-    95% {
-      transform: translateX(-300%);
-    }
-    100% {
-      transform: translateX(-400%);
-    }
+.scroller[data-animated="true"] .scroller_inner {
+    width: max-content;
+    flex-wrap: nowrap;
+    animation: scroll var(--_animation-duration, 40s) var(--_animation-direction, forwards) linear infinite;
+}
+
+.scroller[data-direction="left"] {
+  --_animation-direction: reverse;
+}
+
+.scroller[data-direction="right"] {
+  --_animation-direction: forwards;
+}
+
+.scroller[data-speed="fast"] {
+  --_animation-duration: 10s;
+}
+
+.scroller[data-speed="medium"] {
+  --_animation-duration: 30s;
+}
+
+.scroller[data-speed="slow"] {
+  --_animation-duration: 80s;
+}
+
+@keyframes scroll {
+  to {
+    transform: translate(calc(-50% - .5rem));
+  }
+  
+}
+
+.product-card {
+  display: flex;
+  width: 230px;
+  height: 250px;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid var(--text-color);
+  border-radius: 5px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.product-card .opacity-cover {
+  width: 230px;
+  height: 250px;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+/* ABOUT US SECTION */
+
+#about-us-section a {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 10px 20px;
+    color: white;
+    border: 2px solid white;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+#about-us-section a:hover {
+    color: var(--text-color);
+    border-color: var(--text-color);
+    background-color: rgb(191, 237, 239, 0.1);
 }
